change some infos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
               17 DE MAIO DE 2023
             </span>
           </div>
+
+          <img src="./assets/content-bg.svg" alt="Plano de fundo">
         </div>
       </header>
 
