--- a/index.html
+++ b/index.html
@@ -124,6 +124,79 @@
             </div>
           </div>
         </div>
+
+        <div id="expediente">
+          <div class="top">
+            <h3>Governo Municipal</h3>
+            <div>
+              <div class="name">Dinair Sebastiana Velozo da Silva</div>
+              <p class="function">Prefeita de Santos</p>
+            </div>
+
+            <div>
+              <p class="name">João Rodolfo</p>
+              <p class="function">Vice - Prefeito de Santos</p>
+            </div>
+          </div>
+
+          <div class="middle">
+            <div class="name-wrapper">
+              <p class="name">Sueli Maria Conceição Barros da Silva Capuama</p>
+              <p class="function">Chefe de Gabinete</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Saney Santos Sampaio</p>
+              <p class="function">Secretário Municipal de Governo </p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">João Santos Costa</p>
+              <p class="function">Procurador Geral do Município</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Ana Lúcia Vaz Ferreira</p>
+              <p class="function">Controladora Geral do Município</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Ulysses Halley Lima Oliveira</p>
+              <p class="function">Secretário Municipal de Administração e Gestão de Pessoal</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Samuel de Sousa Silva</p>
+              <p class="function">Secretário Municipal de Educação</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Márcio de Souza Sá</p>
+              <p class="function">Secretário Municipal de Saúde</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Marcus Vinicius Cabral da Silva</p>
+              <p class="function">Secretário Municipal de Desenvolvimento Socia</p>
+            </div>
+            <div class="name-wrapper">
+              <p class="name">Laurieny Alves Carvalho Leal</p>
+              <p class="function">Secretária Municipal de Desen. Econômico, Trabalho e do Turismo</p>
+            </div>
+          </div>
+
+          <div class="bottom">
+            <h3>ÓRGÃO DESTINADO À PUBLICAÇÃO DOS ATOS OFICIAIS DO MUNÍCIPIO</h3>
+
+            <div class="wrapper">
+              <p>Secretaria Municipal de Governo - SEMGOV</p>
+              <span>Email: <a href="#">semgov@santos.sp.gov.br</a></span>
+            </div>
+
+            <div class="wrapper">
+              <p class="name">Alberto Carlos da Silva</p>
+              <p>Diagramação e Publicação</p>
+            </div>
+
+            <div class="wrapper">
+              <p>Suporte Técnico</p>
+              <p>Agência de Tecnologia, Ciência e Inovação - ATI</p>
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer>
