--- a/index.html
+++ b/index.html
@@ -1,221 +1,226 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diário Oficial do Município de Santos</title>
 
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div id="app">
-      <header class="main">
-        <div class="logo">
-          <img
-            src="./assets/logo-prefeitura.svg"
-            alt="Logo da prefeitura da cidade de Santos"
-          />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Diário Oficial do Município de Santos</title>
+
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <div id="app">
+    <header class="main">
+      <div class="logo">
+        <img src="./assets/logo-prefeitura.svg" alt="Logo da prefeitura da cidade de Santos" />
+      </div>
+
+      <div class="content">
+        <h1>
+          <span>DIÁRIO OFICIAL</span>
+          <span>DO MUNICÍPIO</span>
+          <span>DE SANTOS</span>
+        </h1>
+        <div class="info">
+          <span>ANO XVII * Nº 3103</span>
+          <span>ISSN 2763-860X</span>
+          <span class="city">SANTOS</span>
+          <span class="date">
+            <span class="day">QUARTA, </span>
+            17 DE MAIO DE 2023
+          </span>
         </div>
+      </div>
+    </header>
 
-        <div class="content">
-          <h1>
-            <span>DIÁRIO OFICIAL</span>
-            <span>DO MUNICÍPIO</span>
-            <span>DE SANTOS</span>
-          </h1>
-          <div class="info">
-            <span>ANO XVII * Nº 3103</span>
-            <span>ISSN 2763-860X</span>
-            <span class="city">SANTOS</span>
-            <span class="date">
-              <span class="day">QUARTA, </span>
-              17 DE MAIO DE 2023
-            </span>
-          </div>
-        </div>
-      </header>
+    <main>
+      <h2>ÍNDICE</h2>
 
-      <main>
-        <h2>ÍNDICE</h2>
-
-        <div class="summary">
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
-              <a href="#" class="number-page">5</a>
-            </div>
+      <div class="summary">
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
+            <a href="#" class="number-page">5</a>
           </div>
 
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
-              <a href="#" class="number-page">5</a>
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="text-wrapper">
-              <a href="#" class="title">PREFEITURA MUNICIPAL DE BREJO DE AREIA</a>
-              <a href="#" class="number-page">9</a>
-            </div>
-
-            <div class="text-wrapper">
-              <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
-              <a href="#" class="number-page">10</a>
-            </div>
-            <div class="text-wrapper">
-              <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
-              <a href="#" class="number-page">11</a>
-            </div>
-            <div class="text-wrapper">
-              <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
-              <a href="#" class="number-page">12</a>
-            </div>
-            <div class="text-wrapper">
-              <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
-              <a href="#" class="number-page">13</a>
-            </div>
+          <div class="text-wrapper">
+            <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
+            <a href="#" class="number-page">5</a>
           </div>
         </div>
 
-        <div id="expediente">
-          <div class="top">
-            <h3>Governo Municipal</h3>
-            <div>
-              <div class="name">Dinair Sebastiana Velozo da Silva</div>
-              <p class="function">Prefeita de Santos</p>
-            </div>
-
-            <div>
-              <p class="name">João Rodolfo</p>
-              <p class="function">Vice - Prefeito de Santos</p>
-            </div>
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
+            <a href="#" class="number-page">5</a>
           </div>
 
-          <div class="middle">
-            <div class="name-wrapper">
-              <p class="name">Sueli Maria Conceição Barros da Silva Capuama</p>
-              <p class="function">Chefe de Gabinete</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Saney Santos Sampaio</p>
-              <p class="function">Secretário Municipal de Governo </p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">João Santos Costa</p>
-              <p class="function">Procurador Geral do Município</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Ana Lúcia Vaz Ferreira</p>
-              <p class="function">Controladora Geral do Município</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Ulysses Halley Lima Oliveira</p>
-              <p class="function">Secretário Municipal de Administração e Gestão de Pessoal</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Samuel de Sousa Silva</p>
-              <p class="function">Secretário Municipal de Educação</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Márcio de Souza Sá</p>
-              <p class="function">Secretário Municipal de Saúde</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Marcus Vinicius Cabral da Silva</p>
-              <p class="function">Secretário Municipal de Desenvolvimento Socia</p>
-            </div>
-            <div class="name-wrapper">
-              <p class="name">Laurieny Alves Carvalho Leal</p>
-              <p class="function">Secretária Municipal de Desen. Econômico, Trabalho e do Turismo</p>
-            </div>
-          </div>
-
-          <div class="bottom">
-            <h3>ÓRGÃO DESTINADO À PUBLICAÇÃO DOS ATOS OFICIAIS DO MUNÍCIPIO</h3>
-
-            <div class="wrapper">
-              <p>Secretaria Municipal de Governo - SEMGOV</p>
-              <span>Email: <a href="#">semgov@santos.sp.gov.br</a></span>
-            </div>
-
-            <div class="wrapper">
-              <p class="name">Alberto Carlos da Silva</p>
-              <p>Diagramação e Publicação</p>
-            </div>
-
-            <div class="wrapper">
-              <p>Suporte Técnico</p>
-              <p>Agência de Tecnologia, Ciência e Inovação - ATI</p>
-            </div>
+          <div class="text-wrapper">
+            <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
+            <a href="#" class="number-page">5</a>
           </div>
         </div>
-      </main>
 
-      <footer>
-        <div>
-          <img src="./assets/lock.svg" alt="Ícone de um cadeado">
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
+            <a href="#" class="number-page">5</a>
+          </div>
 
-          <p>
-            Certificado digitalmente e com carimbo de tempo
-          </p>
+          <div class="text-wrapper">
+            <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
+            <a href="#" class="number-page">5</a>
+          </div>
         </div>
-        
-        <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
 
-        <div class="page">
-          <span class="current-page">1</span>
-          <span>/</span>
-          <span class="total-page">8</span>
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
+            <a href="#" class="number-page">5</a>
+          </div>
+
+          <div class="text-wrapper">
+            <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
+            <a href="#" class="number-page">5</a>
+          </div>
         </div>
-      </footer>
+
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE ALCÂNTARA</a>
+            <a href="#" class="number-page">5</a>
+          </div>
+
+          <div class="text-wrapper">
+            <a href="#" class="topic">ATA DE REGISTRO DE PREÇOS Nº 15/2023</a>
+            <a href="#" class="number-page">5</a>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="text-wrapper">
+            <a href="#" class="title">PREFEITURA MUNICIPAL DE BREJO DE AREIA</a>
+            <a href="#" class="number-page">9</a>
+          </div>
+
+          <div class="text-wrapper">
+            <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
+            <a href="#" class="number-page">10</a>
+          </div>
+          <div class="text-wrapper">
+            <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
+            <a href="#" class="number-page">11</a>
+          </div>
+          <div class="text-wrapper">
+            <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
+            <a href="#" class="number-page">12</a>
+          </div>
+          <div class="text-wrapper">
+            <a href="#" class="topic">EDITAL DE NOTIFICAÇAÕ - PROCESSO: 009-07-2023</a>
+            <a href="#" class="number-page">13</a>
+          </div>
+        </div>
+      </div>
+
+      <div id="expediente">
+        <div class="top">
+          <h3>Governo Municipal</h3>
+          <div>
+            <div class="name">Dinair Sebastiana Velozo da Silva</div>
+            <p class="function">Prefeita de Santos</p>
+          </div>
+
+          <div>
+            <p class="name">João Rodolfo</p>
+            <p class="function">Vice - Prefeito de Santos</p>
+          </div>
+        </div>
+
+        <div class="middle">
+          <div class="name-wrapper">
+            <p class="name">Sueli Maria Conceição Barros da Silva Capuama</p>
+            <p class="function">Chefe de Gabinete</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Saney Santos Sampaio</p>
+            <p class="function">Secretário Municipal de Governo </p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">João Santos Costa</p>
+            <p class="function">Procurador Geral do Município</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Ana Lúcia Vaz Ferreira</p>
+            <p class="function">Controladora Geral do Município</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Ulysses Halley Lima Oliveira</p>
+            <p class="function">Secretário Municipal de Administração e Gestão de Pessoal</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Samuel de Sousa Silva</p>
+            <p class="function">Secretário Municipal de Educação</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Márcio de Souza Sá</p>
+            <p class="function">Secretário Municipal de Saúde</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Marcus Vinicius Cabral da Silva</p>
+            <p class="function">Secretário Municipal de Desenvolvimento Socia</p>
+          </div>
+          <div class="name-wrapper">
+            <p class="name">Laurieny Alves Carvalho Leal</p>
+            <p class="function">Secretária Municipal de Desen. Econômico, Trabalho e do Turismo</p>
+          </div>
+        </div>
+
+        <div class="bottom">
+          <h3>ÓRGÃO DESTINADO À PUBLICAÇÃO DOS ATOS OFICIAIS DO MUNÍCIPIO</h3>
+
+          <div class="wrapper">
+            <p>Secretaria Municipal de Governo - SEMGOV</p>
+            <span>Email: <a href="#">semgov@santos.sp.gov.br</a></span>
+          </div>
+
+          <div class="wrapper">
+            <p class="name">Alberto Carlos da Silva</p>
+            <p>Diagramação e Publicação</p>
+          </div>
+
+          <div class="wrapper">
+            <p>Suporte Técnico</p>
+            <p>Agência de Tecnologia, Ciência e Inovação - ATI</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <div class="address">
+      <p>Praça São José, s/n, Centro / CEP: 65.636-160 CNPJ: 06.115.307/0001-14 – Timon - MA</p>
     </div>
-  </body>
+    <footer>
+
+      <div>
+        <img src="./assets/lock.svg" alt="Ícone de um cadeado">
+
+        <p>
+          Certificado digitalmente e com carimbo de tempo
+        </p>
+      </div>
+      <p class="msg">O Munícipio de Santos - SP dá garantia da autenticidade deste documento, desde que visualizado
+        através do site <a href="https://www.santos.sp.gov.br/" target="_blank">www.santos.sp.gov.br</a>
+      </p>
+
+
+      <div class="page">
+        <span class="current-page">1</span>
+        <span>/</span>
+        <span class="total-page">8</span>
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
