--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="app">
+    <div id="capa">
       <header class="main">
         <div class="logo">
           <img
