add conteudo section

--- a/index.html
+++ b/index.html
@@ -217,5 +217,47 @@
         </div>
       </footer>
     </div>
+
+    <div id="conteudo">
+      <header class="secondary">
+        <h1>
+          <span>DIÁRIO OFICIAL</span>
+          <span>DO MUNICÍPIO</span>
+          <span>DE SANTOS</span>
+        </h1>
+
+        <div class="content">
+          <div class="info">
+            <span class="city">SANTOS,</span>
+            <span class="date">
+              <span class="day">QUARTA * </span>
+              17 DE MAIO DE 2023
+            </span>
+            <span>ANO XVII * Nº 3103</span>
+            <span>ISSN 2763-860X</span>
+          </div>
+        </div>
+      </header>
+
+      <main>
+        
+      </main>
+
+      <footer>
+        <div>
+          <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
+
+          <p>Certificado digitalmente e com carimbo de tempo</p>
+        </div>
+
+        <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
+
+        <div class="page">
+          <span class="current-page">2</span>
+          <span>/</span>
+          <span class="total-page">8</span>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
