add address on footer

--- a/index.html
+++ b/index.html
@@ -216,19 +216,25 @@
       </main>
 
       <footer>
-        <div>
-          <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
-
-          <p>Certificado digitalmente e com carimbo de tempo</p>
+        <div class="footer-wrapper">
+          <div>
+            <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
+  
+            <p>Certificado digitalmente e com carimbo de tempo</p>
+          </div>
+  
+          <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
+  
+          <div class="page">
+            <span class="current-page">2</span>
+            <span>/</span>
+            <span class="total-page">8</span>
+          </div>
         </div>
 
-        <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
-
-        <div class="page">
-          <span class="current-page">1</span>
-          <span>/</span>
-          <span class="total-page">8</span>
-        </div>
+        <p class="address">
+          Praça São José, s/n, Centro / CEP: 65.636-160 CNPJ: 06.115.307/0001-14 – Timon - MA
+        </p>
       </footer>
     </div>
 
@@ -592,19 +598,25 @@
       </main>
 
       <footer>
-        <div>
-          <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
-
-          <p>Certificado digitalmente e com carimbo de tempo</p>
+        <div class="footer-wrapper">
+          <div>
+            <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
+  
+            <p>Certificado digitalmente e com carimbo de tempo</p>
+          </div>
+  
+          <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
+  
+          <div class="page">
+            <span class="current-page">2</span>
+            <span>/</span>
+            <span class="total-page">8</span>
+          </div>
         </div>
 
-        <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
-
-        <div class="page">
-          <span class="current-page">2</span>
-          <span>/</span>
-          <span class="total-page">8</span>
-        </div>
+        <p class="address">
+          Praça São José, s/n, Centro / CEP: 65.636-160 CNPJ: 06.115.307/0001-14 – Timon - MA
+        </p>
       </footer>
     </div>
   </body>
