add some text on column

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
   
           <div class="page">
-            <span class="current-page">2</span>
+            <span class="current-page">1</span>
             <span>/</span>
             <span class="total-page">8</span>
           </div>
@@ -356,6 +356,15 @@
               Comitê deverá se reunir pelo menos a cada 6 meses a fim de
               discutir as ações para consecução dos objetivos de sua
               competência. <strong>Art. 6º</strong>. Caberá ao Comitê elaborar e
+              aprovar seu regimento interno. <strong>Art. 7º</strong>. A
+              participação nas atividades do Comitê é considera serviço público
+              relevante, vedada a remuneração, a qualquer título, de seus
+              integrantes e eventuais convidados. <strong>Art. 8º</strong>. Este
+              Decreto entra em vigor na data de sua publicação. GABINETE DA
+              PREFEITA MUNICIPAL DE BACABEIRA, EM 09 DE MAIO DE 2023. CARLA
+              FERNANDA DO REGO GONÇALO -
+              <span class="bold">Prefeita Municipal</span>
+              Caberá ao Comitê elaborar e
               aprovar seu regimento interno. <strong>Art. 7º</strong>. A
               participação nas atividades do Comitê é considera serviço público
               relevante, vedada a remuneração, a qualquer título, de seus
