add fourth page

--- a/index.html
+++ b/index.html
@@ -1071,5 +1071,107 @@
         </p>
       </footer>
     </div>
+
+    <div class="conteudo content-wrapper final-page">
+      <header class="secondary">
+        <div class="content">
+          <h1>
+            <span>DIÁRIO OFICIAL</span>
+            <span>DO MUNICÍPIO</span>
+            <span>DE SANTOS</span>
+          </h1>
+
+          <div class="info">
+            <span class="city">SANTOS,</span>
+            <span class="date">
+              <span class="day">QUARTA * </span>
+              17 DE MAIO DE 2023
+            </span>
+            <span>ANO XVII * Nº 3103</span>
+            <span>ISSN 2763-860X</span>
+          </div>
+        </div>
+      </header>
+
+      <main>
+        <div class="column-container">
+          <div class="column">
+            <div class="top">
+              <div class="logo">
+                <img src="./assets/logo-prefeitura.svg" alt="Logo da prefeitura do município de Santos">
+              </div>
+
+              <div class="name-wrapper">
+                <p class="name bold">IVO REZENDE ARAGAO</p>
+                <p class="function">Presidente</p>
+              </div>
+            </div>
+
+            <div class="middle">
+              <a href="https://www.santos.sp.gov.br/" target="_blank">www.santos.sp.gov.br</a>
+              <p class="owner bold">Prefeitura de Santos</p>
+              <p class="address">Avenida dos Holandeses, Nº 6, Quadra 08, CEP: 65071380</p>
+              <p class="place">
+                <span class="city">Santos - </span>
+                <span class="state">SP</span>
+              </p>
+              <p class="contact-number">
+                <span>Contato:</span>
+                <span class="number">(11) 98210-95400</span>
+              </p>
+
+              <a href="#" target="_blank">www.diarioficialdesantos.org.br</a>
+            </div>
+
+            <div class="bottom">
+              <div class="qr-code">
+                <img src="./assets/qrcode_maik-emanoel.github.io.png" alt="QR CODE">
+              </div>
+
+              <div class="additional-info">
+                <p class="bold">
+                  PREFEITURA DE SANTOS:
+                  <span class="number">4385485394850090</span>
+                </p>
+
+                <div class="wrapper">
+                  <p>
+                    Digitally signed by PREFEITURA DE SANTOS:4385485394850090 DN: c=BR, st=SP, I=SANTOS, o=ICP-Brasil, ou=Secretaria da Receita Federal do Brasil - RFB;RFB e-CNPJ A1; AR SENHA DIGITAL; Presencial; 1951053000114, cn=FEDERACAO DO MUNICIPIO DE SANTOS: 4385485394850090;
+                  </p>
+
+                  <p class="date">
+                    Date:
+                    <span>17.05.2023 05:31:03-0300</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <footer>
+        <div class="footer-wrapper">
+          <div>
+            <img src="./assets/lock.svg" alt="Ícone de um cadeado" />
+
+            <p>Certificado digitalmente e com carimbo de tempo</p>
+          </div>
+
+          <a href="https://www.santos.sp.gov.br/">www.santos.sp.gov.br</a>
+
+          <div class="page">
+            <span class="current-page">4</span>
+            <span>/</span>
+            <span class="total-page">8</span>
+          </div>
+        </div>
+
+        <p class="address">
+          Praça São José, s/n, Centro / CEP: 65.636-160 CNPJ: 06.115.307/0001-14
+          – Timon - MA
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
