add qr-code description

--- a/index.html
+++ b/index.html
@@ -1126,6 +1126,7 @@
             <div class="bottom">
               <div class="qr-code">
                 <img src="./assets/qrcode_maik-emanoel.github.io.png" alt="QR CODE">
+                <p class="description">Acesse o Diário Oficial através do QR Code</p>
               </div>
 
               <div class="additional-info">
